fix de una imagen sola del footer

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <img src="./img/punto_digital.jpg" alt="logo punto digital" class="col-md col-4 foto_auspiciantes">
             <img src="./img/la_soderia.jpg" alt="logo la soderia" class="col-md col-4 foto_auspiciantes">
             <img src="./img/flix.png" alt="logo cine flix" class="col-md col-4 foto_auspiciantes">
-            <img src="./img/noticias azul.jpg" alt="logo noticias azul" class="col-md col-4 foto_auspiciantes">
+            <img src="./img/noticias_azul.jpg" alt="logo noticias azul" class="col-md col-4 foto_auspiciantes">
           </div>
 
           <div class="row mt-5 div_disclaimer">
