arreglo de imgs en todas las pages

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         <div class="row mx-0 seccion_quienes_somos">
           <div class="col-6">
             <h1 class="quienes_somos_h1">
-              Lorem.
+              Quienes Somos?
             </h1>
 
             <p class="quienes_somos_parrafo">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam earum quidem, nam blanditiis qui dolorum optio exercitationem, esse debitis libero quam omnis accusantium dolor amet. Debitis, fugiat et. Doloremque, rem!
+              AESMA gaming es un equipo de Esports azuleño que compite en toda clase de categorias de deportes electronicos como FIFA, Gran Turismo, Clash Royale y mucho mas. Te invitamos a que recorras la pagina y te unas a esta comunidad
             </p>
           </div>
 
@@ -183,7 +183,7 @@
             <div class="col-6">
               <div>
                 <h3>
-                  lorem
+                  Torneo de invierno
                 </h3>
                 <p class="parrafo_secundario_agenda">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate minima quam id aliquam, officiis assumenda deserunt amet quae inventore nihil!
@@ -192,7 +192,7 @@
 
               <div>
                 <h3>
-                  lorem
+                  Torneo de primavera
                 </h3>
                 <p class="parrafo_secundario_agenda">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate minima quam id aliquam, officiis assumenda deserunt amet quae inventore nihil!
@@ -201,7 +201,7 @@
 
               <div>
                 <h3>
-                  lorem
+                  Torneo de verano
                 </h3>
                 <p class="parrafo_secundario_agenda">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate minima quam id aliquam, officiis assumenda deserunt amet quae inventore nihil!
@@ -210,7 +210,7 @@
 
               <div>
                 <h3>
-                  lorem
+                  Torneo de otoño
                 </h3>
                 <p class="parrafo_secundario_agenda">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate minima quam id aliquam, officiis assumenda deserunt amet quae inventore nihil!
