--- a/pages/ranking.html
+++ b/pages/ranking.html
@@ -69,28 +69,27 @@
 
   <!---------------------------------------------- Footer ---------------------------------------------------------------->
 
-    <div class="container-fluid fixed-bottom div_footer_ranking">
-      <hr>
-      <footer>
-        <div class="row justify-content-center">
-          <img src="../img/teatro espanol.png" alt="logo teatro espanol" class="col-md col-4 foto_auspiciantes">
-          <img src="../img/mucipalidad.png" alt="logo municipalidad" class="col-md col-4 foto_auspiciantes">
-          <img src="../img/soy quijote.jpg" alt="logo soy quijote" class="col-md col-4 foto_auspiciantes">
-          <img src="../img/punto digital.jpg" alt="logo punto digital" class="col-md col-4 foto_auspiciantes">
-          <img src="../img/la soderia.jpg" alt="logo la soderia" class="col-md col-4 foto_auspiciantes">
-          <img src="../img/flix.png" alt="logo cine flix" class="col-md col-4 foto_auspiciantes">
-          <img src="../img/noticias azul.jpg" alt="logo noticias azul" class="col-md col-4 foto_auspiciantes">
+  <footer class="container-fluid div_footer">
+    <hr>
+    <div>
+      <div class="row justify-content-center">
+        <img src="../img/teatro_espanol.png" alt="logo teatro espanol" class="col-md col-4 foto_auspiciantes">
+        <img src="../img/mucipalidad.png" alt="logo municipalidad" class="col-md col-4 foto_auspiciantes">
+        <img src="../img/soy_quijote.jpg" alt="logo soy quijote" class="col-md col-4 foto_auspiciantes">
+        <img src="../img/punto_digital.jpg" alt="logo punto digital" class="col-md col-4 foto_auspiciantes">
+        <img src="../img/la_soderia.jpg" alt="logo la soderia" class="col-md col-4 foto_auspiciantes">
+        <img src="../img/flix.png" alt="logo cine flix" class="col-md col-4 foto_auspiciantes">
+        <img src="../img/noticias_azul.jpg" alt="logo noticias azul" class="col-md col-4 foto_auspiciantes">
+      </div>
+
+      <div class="row mt-5 div_disclaimer">
+        <img src="../img/Isologo.png" alt="logo AESMA" class="col-1 foto_logo">
+        <span class="col-1 span_footer">
+            Copyright
+        </span>
         </div>
-
-        <div class="row mt-5 div_disclaimer">
-          <img src="../img/Isologo.png" alt="logo AESMA" class="col-1 foto_logo">
-          <span class="col-1 span_footer">
-              Copyright
-          </span>
-          </div>
-      </footer>
-    </div>
-
+      </div>
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
