--- a/pages/torneos.html
+++ b/pages/torneos.html
@@ -11,7 +11,7 @@
 
   <!---------------------------------------------- Encabezado ---------------------------------------------------------------->
 
-  <div class="container-fluid p-0">
+    <div class="container-fluid p-0">
     <nav class="navbar navbar-expand-lg bg-body-tertiary pt-0 encabezado_nav">
         <div class="container-fluid encabezado_div">
           <a class="navbar-brand" href="../index.html"><img src="../img/Isologo.png" class="img-fluid imagen_nav" alt="LOGO"></a>
@@ -30,27 +30,27 @@
           </div>
         </div>
     </nav>
-</div>
+    </div>
 
 <!---------------------------------------------- Torneos ---------------------------------------------------------------->
 
-<main>
+    <main>
   <img src="../img/ranking-fifa18.jpg" class="px-5" alt="ranking">
-</main>
+    </main>
 
 <!---------------------------------------------- Footer ---------------------------------------------------------------->
 
-<div class="container-fluid mt-5 div_footer">
+    <footer class="container-fluid div_footer">
   <hr>
-  <footer>
+  <div>
     <div class="row justify-content-center">
-      <img src="../img/teatro espanol.png" alt="logo teatro espanol" class="col-md col-4 foto_auspiciantes">
+      <img src="../img/teatro_espanol.png" alt="logo teatro espanol" class="col-md col-4 foto_auspiciantes">
       <img src="../img/mucipalidad.png" alt="logo municipalidad" class="col-md col-4 foto_auspiciantes">
-      <img src="../img/soy quijote.jpg" alt="logo soy quijote" class="col-md col-4 foto_auspiciantes">
-      <img src="../img/punto digital.jpg" alt="logo punto digital" class="col-md col-4 foto_auspiciantes">
-      <img src="../img/la soderia.jpg" alt="logo la soderia" class="col-md col-4 foto_auspiciantes">
+      <img src="../img/soy_quijote.jpg" alt="logo soy quijote" class="col-md col-4 foto_auspiciantes">
+      <img src="../img/punto_digital.jpg" alt="logo punto digital" class="col-md col-4 foto_auspiciantes">
+      <img src="../img/la_soderia.jpg" alt="logo la soderia" class="col-md col-4 foto_auspiciantes">
       <img src="../img/flix.png" alt="logo cine flix" class="col-md col-4 foto_auspiciantes">
-      <img src="../img/noticias azul.jpg" alt="logo noticias azul" class="col-md col-4 foto_auspiciantes">
+      <img src="../img/noticias_azul.jpg" alt="logo noticias azul" class="col-md col-4 foto_auspiciantes">
     </div>
 
     <div class="row mt-5 div_disclaimer">
@@ -59,9 +59,9 @@
           Copyright
       </span>
       </div>
-  </footer>
-</div>
+    </div>
+    </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
