--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="eSports Argentina, FIFA Argentina, Gran Turismo Argentina, Clash Royale Argentina, Torneos eSports Argentina, Gamers Argentina, Comunidad de eSports Argentina, Juegos de deportes electrónicos, Jugadores profesionales Argentina, Eventos de eSports en Argentina, Ligas de eSports Argentina, Competencias de FIFA, Carreras de Gran Turismo, Torneos de Clash Royale, Equipos de eSports en Argentina, Noticias de eSports Argentina, Comunidad de eSports en línea, eSports en consolas, Clasificatorias y eliminatorias, Jugadores destacados en FIFA, eSports y cultura gamer en Argentina, Eventos presenciales y en línea, Organizaciones eSports en Argentina, Desarrollo de la escena eSports en Argentina">
+    <meta name="description" content="Portal eSports Argentina: Noticias, torneos y comunidad de gamers apasionados por FIFA, Gran Turismo y Clash Royale. ¡Únete a la acción!">
+    <link rel="shortcut icon" href="./img/Isologo.png" type="image/x-icon">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 
-    <title>AESMA</title>
+    <title>AESMA Gaming - Incio</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
