--- a/pages/ranking.html
+++ b/pages/ranking.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AESMA</title>
+    <meta name="keywords" content="Ranking eSports, Clasificación gamers, Torneos en línea, Puntuación jugadores, Líderes eSports, Mejores jugadores, Posiciones en torneos, eSports en Argentina, FIFA ranking, Gran Turismo ranking, Clash Royale ranking, Competencias gamers, Estadísticas eSports, Top gamers, Lugar en el ranking, Tabla de posiciones, Jugadores destacados, Competidores eSports, Posiciones actualizadas, eSports competitivos, Seguimiento de resultados, Rendimiento en torneos, Mejor jugador en Argentina, Clasificación de equipos, Jugadores profesionales, eSports y competitividad, Posiciones en la liga, Líderes de eSports.">
+    <meta name="description" content="Descubre quiénes lideran la competencia en nuestros rankings de eSports en Argentina. Actualización constante de las mejores posiciones y jugadores destacados.">
+    <link rel="shortcut icon" href="./img/Isologo.png" type="image/x-icon">
+
+    <title>AESMA Gaming - Ranking</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -38,28 +43,30 @@
     <section class="container-fluid">
       <div class="row">
         <h1 class="h1_ranking">
-          Titulo
+          Ranking
         </h1>
       </div>
 
       <div class="row">
         <div class="col-md-6 col-12 my-5">
           <h2 class="h2_ranking">
-            Subtitulo
+            Tabla anual
           </h2>
   
           <p class="parrafo_ranking">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate autem alias cupiditate magni perferendis iste voluptates quaerat illo voluptatum nulla, ducimus fugit, aliquid sapiente iusto eos dolor vero, quibusdam quia.
+            participante1: 100pts
+            participante2: 200pts
           </p>
         </div>
   
         <div class="col-md-6 col-12 my-5">
           <h2 class="h2_ranking">
-            Subtitulo
+            Torneo actual
           </h2>
   
           <p class="parrafo_ranking">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat deserunt, sunt ratione molestiae laborum vero quia veritatis perspiciatis unde dolores quas officia, illum optio illo aliquid ad eius recusandae cum!
+            participante1: 100pts
+            participante2: 200pts
           </p>
         </div>
       </div>
@@ -69,7 +76,7 @@
 
   <!---------------------------------------------- Footer ---------------------------------------------------------------->
 
-  <footer class="container-fluid div_footer">
+  <footer class="container-fluid fixed-bottom div_footer">
     <hr>
     <div>
       <div class="row justify-content-center">
