--- a/pages/torneos.html
+++ b/pages/torneos.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Torneos eSports, Competiciones gamers, Eventos en Argentina, Calendario de torneos, Inscripción a torneos, Premios en efectivo, Reglas del torneo, Participación en torneos, eSports en línea, Torneos de FIFA, Gran Turismo en torneo, Clash Royale torneos, Torneos en vivo, Competencias emocionantes, Fechas de torneos, eSports competitivos, Campeonatos nacionales, Formato de torneos, Clasificatorias y eliminatorias, Equipos en torneos, Torneos en consolas, Experiencia de juego, Juegos en torneo, Límite de jugadores, Torneos en equipo, Torneos de alto nivel, Competir en eSports, Registro de equipos, Calendario de competencias.">
+    <meta name="description" content="Explora emocionantes torneos eSports en Argentina. Únete a la competencia, gana premios y demuestra tu habilidad en FIFA, Gran Turismo y Clash Royale.">
+    <link rel="shortcut icon" href="./img/Isologo.png" type="image/x-icon">
+
     <title>AESMA</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
