correcion de video a img por copyright

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </p>
           </div>
 
-          <iframe class="col-6 d-none d-lg-block me-1 video_quienes_somos" width="560" height="315" src="https://www.youtube.com/embed/-vL01jbgENE?si=Jdq2BER6ZjzHaEVl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <img class="col-6 d-none d-lg-block me-1 video_quienes_somos" src="./img/fifa.jpg" alt="presentacion eafc">
         </div>
       </section>
 
