cambio de una noticia para mejor performance

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </div>
 
                 <div class=" card px-0 col-md-4 col-12">
-                  <img src="https://pbs.twimg.com/media/FZGC7U6XgAE2aOI?format=jpg&name=large" alt="noticia6error" class="card-img-top foto_secundaria">
+                  <img src="./img/prueba6.jpg" alt="noticia6error" class="card-img-top foto_secundaria">
                   <div class="card-body">
                     <h3 class="card-title noticias_h3">
                       titulo
