--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
     <div class="container-fluid p-0">
       <!--Encabezado-->
-      <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary py-0 sticky-top encabezado_nav">
+      <header class="sticky-top">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary py-0 encabezado_nav">
           <div class="container-fluid ps-4 encabezado_div">
             <a class="navbar-brand" href="./index.html"><img src="./img/Isologo.png" class="img-fluid imagen_nav" alt="LOGO"></a>
             <button class="navbar-toggler button_nav" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
