--- a/pages/ranking.html
+++ b/pages/ranking.html
@@ -16,7 +16,7 @@
 
   <!---------------------------------------------- Encabezado ---------------------------------------------------------------->
 
-    <div class="container-fluid p-0">
+    <div class="container-fluid sticky-top p-0">
         <nav class="navbar navbar-expand-lg bg-body-tertiary pt-0 encabezado_nav">
             <div class="container-fluid encabezado_div">
               <a class="navbar-brand" href="../index.html"><img src="../img/Isologo.png" class="img-fluid imagen_nav" alt="LOGO"></a>
