se agregan los ultimos textos

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               Agenda
             </h2>
             <p class="col-12 parrafo_principal_agenda">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, temporibus aliquam facere, pariatur voluptates illum tenetur dicta, libero suscipit ratione iusto deleniti a et odit odio! Qui dicta nulla nemo laudantium molestias harum ipsa, itaque iste iusto dolorem ut maxime? Omnis dolor eum molestias, sequi nihil non, est inventore incidunt debitis necessitatibus eveniet optio minima tempore temporibus voluptate iure.
+              Los torneos de AESMA cuentan con 4 fases divididas en cada estacion del año
             </p>
           </div>
 
@@ -191,7 +191,7 @@
                   Torneo de invierno
                 </h3>
                 <p class="parrafo_secundario_agenda">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate minima quam id aliquam, officiis assumenda deserunt amet quae inventore nihil!
+                    Se realizara del dia x a x 
                 </p>
               </div>
 
@@ -200,7 +200,7 @@
                   Torneo de primavera
                 </h3>
                 <p class="parrafo_secundario_agenda">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate minima quam id aliquam, officiis assumenda deserunt amet quae inventore nihil!
+                    Se realizara del dia x a x 
                 </p>
               </div>
 
@@ -209,7 +209,7 @@
                   Torneo de verano
                 </h3>
                 <p class="parrafo_secundario_agenda">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate minima quam id aliquam, officiis assumenda deserunt amet quae inventore nihil!
+                    Se realizara del dia x a x 
                 </p>
               </div>
 
@@ -218,7 +218,7 @@
                   Torneo de otoño
                 </h3>
                 <p class="parrafo_secundario_agenda">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate minima quam id aliquam, officiis assumenda deserunt amet quae inventore nihil!
+                    Se realizara del dia x a x 
                 </p>
               </div>
 
@@ -240,7 +240,7 @@
             </h2>
   
             <p class="col-12 parrafo_campeones">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat aut repellendus, aperiam eaque est accusantium, et voluptas voluptatum quia, ratione modi magni deleniti!
+                Presentamos a los campeones azuleños
             </p>
           </div>
 
