se ajustan algunas letras para mejor visualizacion

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <h2 class="col-12 text-center my-5">
               Agenda
             </h2>
-            <p class="col-12 parrafo_principal_agenda">
+            <p class="col-12 text-center my-3 parrafo_principal_agenda">
               Los torneos de AESMA cuentan con 4 fases divididas en cada estacion del año
             </p>
           </div>
@@ -239,7 +239,7 @@
                 Campeones
             </h2>
   
-            <p class="col-12 parrafo_campeones">
+            <p class="col-12 text-center parrafo_campeones">
                 Presentamos a los campeones azuleños
             </p>
           </div>
