ajuste de agenda

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           </div>
 
           <div class="row div_mayor_agenda">
-            <div class="col-6">
+            <div class="text-center col-6">
               <div>
                 <h3>
                   Torneo de invierno
